--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.2.2",
     "antd": "^4.6.5",
     "axios": "^0.19.2",
+    "framer-motion": "^2.8.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
@@ -18,8 +20,8 @@
     "build": "npm run build:css && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build:css": "postcss src/assets/tailwind.css -o src/assets/main.css", 
-    "watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css"
+    "build:css": "postcss src/assets/tailwind/tailwind.css -o src/assets/tailwind/main.css",
+    "watch:css": "postcss src/assets/tailwind/tailwind.css -o src/assets/tailwind/main.css"
   },
   "eslintConfig": {
     "extends": "react-app"
