--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "craco-less": "^1.17.0",
     "framer-motion": "^2.8.0",
     "moment": "^2.29.1",
+    "query-string": "^6.13.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
